fixtures/errors/eval_syntax_error.expected
exit_code: 2
--- stdout ---
--- stderr ---
Runtime error: SyntaxError: error: Expected ident
 --> input.js:1:5
1 | var var
  |     ^^^

